src/test/ui/impl-trait/issue-72911.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `foo`
  --> $DIR/issue-72911.rs:12:33
   |
LL | fn gather_from_file(dir_entry: &foo::MissingItem) -> impl Iterator<Item = Lint> {
   |                                 ^^^ use of undeclared crate or module `foo`

error[E0433]: failed to resolve: use of undeclared crate or module `foo`
  --> $DIR/issue-72911.rs:17:41
   |
LL | fn lint_files() -> impl Iterator<Item = foo::MissingItem> {
   |                                         ^^^ use of undeclared crate or module `foo`

error[E0720]: cannot resolve opaque type
  --> $DIR/issue-72911.rs:7:24
   |
LL | pub fn gather_all() -> impl Iterator<Item = Lint> {
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ recursive opaque type
LL |
LL |     lint_files().flat_map(|f| gather_from_file(&f))
   |     -----------------------------------------------
   |     |
   |     returning here with type `FlatMap<impl Iterator, [type error], [closure@$DIR/issue-72911.rs:9:27: 9:51]>`
   |     returning here with type `FlatMap<impl Iterator, [type error], [closure@$DIR/issue-72911.rs:9:27: 9:51]>`
...
LL | fn gather_from_file(dir_entry: &foo::MissingItem) -> impl Iterator<Item = Lint> {
   |                                                      -------------------------- returning this opaque type `FlatMap<impl Iterator, [type error], [closure@$DIR/issue-72911.rs:9:27: 9:51]>`
...
LL | fn lint_files() -> impl Iterator<Item = foo::MissingItem> {
   |                    -------------------------------------- returning this opaque type `FlatMap<impl Iterator, [type error], [closure@$DIR/issue-72911.rs:9:27: 9:51]>`

error[E0277]: `()` is not an iterator
  --> $DIR/issue-72911.rs:17:20
   |
LL | fn lint_files() -> impl Iterator<Item = foo::MissingItem> {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `()` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `()`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0433, E0720.
For more information about an error, try `rustc --explain E0277`.
